# gambletron

./: .gitignore  CLAUDE.md  CMakeLists.txt  pyproject.toml
scripts/: setup_cards.py
src/engine/: bindings.cpp  game_tree.h  hand_eval.cpp  hand_eval.h  mccfr.cpp  mccfr.h
src/gambletron/ai/: abstraction.py  action_abstraction.py  belief.py  blueprint.py  search.py  strategy.py
src/gambletron/cli/: demo.py  play.py  train.py
src/gambletron/display/: card_loader.py  events.py  process.py  renderer.py  sink.py
src/gambletron/hardware/: gpio_dealer.py  hid_reader.py  interface.py  physical_table.py  protocol.py  serial_comm.py  simulated.py
src/gambletron/players/: ai.py  base.py  human.py  random_player.py
src/gambletron/poker/: __init__.py  card.py  game.py  hand.py  rules.py  state.py  table.py
tests/: test_abstraction.py  test_card.py  test_game.py  test_hand_eval.py  test_mccfr.py  test_physical.py  test_search.py
